# hatto

./: Cargo.toml  Makefile  Makefile.toml  README.md  dev.dockerfile  docker-compose.yml  hatto.dockerfile
.github/workflows/: docker.yml  pages.yml
doc/: book.toml
doc/src/: README.md  SUMMARY.md
doc/src/evaluate/: README.md  curation.md  policy.md
example/basic/: basic.cdx.xml  basic.spdx  basic.tsv  curation.py  policy.py
src/: cli.rs  error.rs  main.rs
src/command/: evaluate.rs  mod.rs
src/cyclonedx/: bom.rs  component.rs  license.rs  mod.rs
src/model/: material.rs  mod.rs
test/cyclonedx/: basic.cdx.json  basic.cdx.xml
