[package]
name = "hatto"
version = "0.1.0"
authors = ["heriet <heriet@heriet.info>"]
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[[bin]]
name = "hatto"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.51"
clap = { version = "3.1.12", features = ["derive"] }
csv = { version = "1.1.6"}
minidom = "0.15.0"
pyo3 = { version = "0.16.5", features = ["auto-initialize"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.72"
spdx-rs = "0.5.1"
thiserror = "1.0.30"

[build-dependencies]
